crates/normalize/tests/snapshots/cli_snapshots__help_analyze_test_gaps.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\", \"test-gaps\"])"
---
Find public functions with no direct test caller

Usage: normalize analyze test-gaps [OPTIONS] [TARGET]

Arguments:
  [TARGET]  Target file or directory

Options:
      --all                 Show all functions (including tested), sorted by test calls ascending
      --min-risk <N>        Only show functions above this risk threshold
  -l, --limit <LIMIT>       Maximum number of functions to show (0 = no limit) [default: 20]
      --sarif               Output in SARIF format for IDE integration
      --allow <SYMBOL>      Add function to .normalize/test-gaps-allow
      --reason <REASON>     Reason for allowing
      --json                Output as JSON
      --jsonl               Output as JSON Lines (one object per line)
      --jq <EXPR>           Filter JSON output with jq expression (implies --json)
      --pretty              Human-friendly output with colors and formatting
      --compact             Compact output without colors (overrides TTY detection)
      --output-schema       Output JSON schema for the command's return type
      --input-schema        Output JSON schema for the command's input arguments
      --params-json <JSON>  Pass command arguments as JSON (overrides CLI args)
  -r, --root <ROOT>         Root directory (defaults to current directory)
      --exclude <PATTERN>   Exclude paths matching pattern or @alias
      --only <PATTERN>      Include only paths matching pattern or @alias
      --diff [<BASE>]       Analyze only files changed since base ref (e.g., main, HEAD~1) If no BASE given, defaults to origin's default branch
  -h, --help                Print help
