crates/normalize/tests/snapshots/cli_snapshots__help_cfg.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"cfg\"])"
---
Build and render the control flow graph for a function. Use to visualize execution paths, branches, and loops.

Usage: normalize cfg [OPTIONS] [path]

Arguments:
  [path]  Source file path

Options:
  -f, --function <function>        Function name filter (defaults to first function found)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --format <format>            Output format: mermaid (default)
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Also known as: control-flow graph, flow chart, code flow. Leaf command
(formerly the redundant `cfg cfg`); the compute is owned by `normalize-cfg`.

Examples:
normalize cfg src/lib.rs                 # CFG of the first function
normalize cfg src/lib.rs -f my_function  # CFG of a specific function
