crates/normalize/tests/snapshots/cli_snapshots__help_cfg_cfg.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"cfg\", \"cfg\"])"
---
Build and render the control flow graph for a function in a source file.

Usage: normalize cfg cfg [OPTIONS] [path]

Arguments:
  [path]  Source file path

Options:
  -f, --function <function>        Function name filter (defaults to first function found)
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --format <format>            Output format: mermaid (default)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
