crates/normalize/tests/snapshots/cli_snapshots__help_context.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"context\"])"
---
Inject project context into LLM prompts. Use to provide per-project instructions to agents.

Usage: normalize context [OPTIONS] [COMMAND]

Commands:
  migrate  Migrate old `.context.md` / `CONTEXT.md` files to the new `.normalize/context/` system.
  help     Print this message or the help of the given subcommand(s)

Options:
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
      --root <root>                Root directory for hierarchy walk (default: cwd)
      --match <match>              Match context against KEY=VALUE pair (repeatable)
      --stdin                      Read context JSON from stdin
      --prefix <prefix>            Namespace stdin JSON under this prefix
      --all                        Return all context entries without filtering
      --from <from>                Context directory name inside .normalize/ (default: context)
      --list                       Show source file paths only, not content
      --file <file>                Load a structured file into caller context as PREFIX=PATH (repeatable; supports .json, .toml, .yaml/.yml)
  -h, --help                       Print help
  -V, --version                    Print version

Resolves Markdown files from .normalize/context/ directories, walked bottom-up
(project → parent → ~/.normalize/context/). Each .md file may have YAML frontmatter;
blocks whose frontmatter matches the caller context are included. Bare files always match.

FRONTMATTER FORMAT (.normalize/context/hints.md):
--- / claudecode: / hook: UserPromptSubmit / scope: / language: rust / ---
Body text included when caller context matches.
Multiple blocks per file separated by ---. Frontmatter is arbitrary nested YAML.

--match SYNTAX (dot-path KEY=VALUE, repeatable, ANDed):
--match hook=UserPromptSubmit            (simple key)
--match claudecode.hook=UserPromptSubmit (nested dot-path)

--stdin / --prefix (pipe JSON as caller context):
echo '{"hook":"UserPromptSubmit"}' | normalize context --stdin --prefix claudecode

--file PREFIX=PATH (load .json/.toml/.yaml into context):
normalize context --file cfg=config.toml

EXAMPLES:
normalize context                                             (all matching, no filter)
normalize context --match claudecode.hook=UserPromptSubmit   (Claude Code hook shim)
cat | normalize context --stdin --prefix claudecode          (pipe stdin as context)
normalize context --all --list                               (list all source files)
normalize context migrate --apply                            (migrate .context.md files)
