crates/normalize/tests/snapshots/cli_snapshots__help_daemon.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"daemon\"])"
---
Control the background daemon that keeps the index fresh automatically.

Usage: normalize daemon [OPTIONS] [COMMAND]

Commands:
  status  Show daemon status
  stop    Stop the daemon
  start   Start the daemon (background)
  run     Run the daemon in foreground (for debugging)
  add     Add a root to watch
  remove  Remove a root from watching
  watch   Watch a root for file changes, streaming events to the terminal
  list    List all watched roots
  help    Print this message or the help of the given subcommand(s)

Options:
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
  -V, --version                    Print version
